@@ -17,6 +17,7 @@
 - Status display shows what's the base and modifier keyspace currently in use
 - Added a workaround for some OpenCL kernel to compile with amd-gpu-pro
 - Added option --keep-guessing to continue cracking hashes even after they have been cracked (to find collisions)
+- Fixed a bug when cracking a large salted hashlist: If a word is rejected this produces so high CPU load that cracking process doesn't start
 
 ##
 ## Algorithms
